--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div class="products-container">
       <div>
-        <img src="./images/image-product-desktop.jpg" alt="" />
+        <img src="./images/image-product-desktop.jpg" alt="" class="desktop" />
+
+        <img src="./images/image-product-mobile.jpg" alt="" class="mobile" />
       </div>
 
       <div class="product-detail">
