--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Product preview card component</title>
   </head>
   <body>
-    <div class="products-container">
+    <main class="products-container">
       <div>
         <img src="./images/image-product-desktop.jpg" alt="" class="desktop" />
 
@@ -41,7 +41,7 @@
 
         <button>Add to cat</button>
       </div>
-    </div>
+    </main>
 
     <!-- <div class="attribution">
       Challenge by
